--- a/src/component/Info/Info.module.scss
+++ b/src/component/Info/Info.module.scss
@@ -1,6 +1,3 @@
-.header{
-
-}
 .overlay{
   position: absolute;
   left: 0;
@@ -12,15 +9,13 @@
   visibility: hidden;
   opacity: 0;
   transition: opacity 0.3s ease-in-out,visibility 0.1s ease-in-out;
-  //overflow: hidden;
-}
-.overlayVisible {
-  visibility: visible;
   overflow: hidden;
+}
+.overlayVisible{
+  visibility: visible;
   opacity: 1;
   .sidebar{
     transform: translateX(0);
-    //overflow: hidden;
   }
 }
 .sidebar{
@@ -31,24 +26,46 @@
   flex-direction: row;
   position: absolute;
   right: 0;
-  transform: translateX(100%);
+  box-shadow: -10px 4px 24px rgba(0,0,0,0.1);
   padding: 30px;
+  transform: translateX(0%);
   transition: transform 0.3s ease-in-out;
   overflow: auto;
 }
-.moving{
-  //display: flex;
-  //flex-direction: row;
+.header{
+  position: fixed;
 }
 .comments{
   //display: flex;
   //flex-direction: row;
+  width: 300px;
+}
+.moving{
+  margin:10px;
+  background: white;
 }
 .comment{
   background: white;
   margin: 10px;
   border-radius: 10px;
+  //width: 100%;
 }
 .wrapper{
+  overflow-y: auto;
   display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+.headerBlock{
+  display: flex;
+  justify-content: space-between;
+}
+.message{
+  display: flex;
+}
+.delete{
+  cursor: pointer;
+}
+.move{
+  overflow-y: auto;
 }
